--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width" />
+    <meta charset="UTF-8">
     <title>Plantr</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/flatly/bootstrap.min.css">
@@ -11,34 +13,66 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <style>
-    body {
-        padding-top: 80px;
-    }
+        
+        body {
+            padding-top: 80px;
+        }
 
-    .btn-css {
-        display: inline-block;
-        float: auto;
-        padding: 0.5%;
-        padding-right: 2.5%;
-        width: auto;
-        height: auto;
-        font-size: 73%;
-    }
+        h1 {
+            padding: 30px;
+            font-size: 50px;
+        }
 
+        .jumbotron {
+            width: 100%;
+        }
+
+        .jumbotron>hr {
+            border-top-color: rgb(157, 227, 175);
+            width: 75%;
+        }
+        
+        .btn-css {
+            position: relative;
+            display: inline-block;
+            float: auto;
+            width: 30%;
+            height: auto;
+            font-size: 80%;
+            padding: 15px;
+            margin:1%;
+        }
+
+        .fa {
+            padding: 0;
+            padding-right: 5px;
+        }
+        @media screen and (max-width:767px) {
+            .jumbotron>hr {
+                width: 100%;
+            }
+        
+            .btn-css {
+                width: 100%;
+                font-size: 70%;
+                padding: 5px;
+            }
+        }
 
     </style>
 </head>
+
 
 <body>
     <div class="container">
         <div class="jumbotron text-center">
             <h1>Plantr<span class="fa fa-leaf fa"></span></h1>
-            <a href="/login" class="btn btn-success btn-css"><span class="fa fa-user"></span> Login</a>
-            <a href="/signup" class="btn btn-success btn-css"><span class="fa fa-user"></span> Signup </a>
-            <hr />
-            <p>OR</p>
-            <a href="/auth/twitter" class="btn btn-info btn-css"><span class="fa fa-twitter"></span> Register with Twitter </a>
-            <a href="/auth/google" class="btn btn-danger btn-css"><span class="fa fa-google-plus"></span>Register with Google+</a>
+            <a href="/login" class="btn btn-success btn-css"><span class="fa fa-pagelines"></span> LOG IN</a>
+            <a href="/signup" class="btn btn-success btn-css"><span class="fa fa-user"></span> SIGN UP </a>
+            <hr>
+            <h4>Or Connect With:</h4>
+            <a href="/auth/twitter" class="btn btn-info btn-css social-btn"><span class="fa fa-twitter"></span>Twitter</a>
+            <a href="/auth/google" class="btn btn-danger btn-css social-btn"><span class="fa fa-google-plus"></span>Google+</a>
             </div>
        </div>
 </body>
