--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width" />
+    <meta charset="UTF-8">
     <title>Plantr Login</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/flatly/bootstrap.min.css">
@@ -10,7 +12,14 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <style>
-        body         { padding-top:80px; }
+
+        body { 
+            padding-top:80px; 
+        }
+
+        hr {
+            border-top-color: rgb(157, 227, 175);
+        }
 
     </style>
 </head>
@@ -35,12 +44,13 @@
             <input type="password" class="form-control" name="password">
         </div>
 
-      <button type="submit" class="btn btn-primary active">Login</button>
+        <button type="submit" class="btn btn-success btn-block">LOG IN<i class="fa fa-long-arrow-right"></i></button>
+
     </form>
 
     <hr>
     <div class="text-center">
-    <p>Not registered yet? <a href="/signup">Signup</a></p>
+    <p>Not registered yet? <a href="/signup">Sign up</a></p>
     <p>Or go <a href="/">home</a>.</p>
     </div>
 
