--- a/public/style.css
+++ b/public/style.css
@@ -113,8 +113,8 @@ footer {
   display: inline-block!important;
   border-radius: 6px!important;
   background: #dddddd!important;
-  height: 40px!important;
-  width: 30px!important;
+  height: auto!important;
+  width: 10%!important;
   margin-right: 3px!important;
   line-height: 40px!important;
   text-align: center!important;
