--- a/public/style.css
+++ b/public/style.css
@@ -415,8 +415,16 @@ label {
     margin: 15px;
   }
 
+  .calendar {
+    width: auto;
+  }
+
   .plantpg-img {
     width: 600px;
+  }
+
+  .calendar-panel {
+    width: auto;
   }
 }
 
